Team => add confetti animation (with react-confetti & react-use)

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "gsap": "^3.10.3",
     "normalize.css": "^8.0.1",
     "react": "^18.0.0",
+    "react-confetti": "^6.0.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.3.2",
     "styled-components": "^5.3.5",
     "swiper": "^8.1.1",
     "typewriter-effect": "^2.18.2",
